add get product license
